--- a/docs/_includes/elements/new-tag.html
+++ b/docs/_includes/elements/new-tag.html
@@ -3,8 +3,7 @@
 
 <div class="tags has-addons">
   {% if tag_version_value > current_version_value %}
-    <span class="tag">Coming soon!</span>
-    <span class="tag is-warning">{{ include.version }}</span>
+    <span class="tag is-warning">Coming soon!</span>
   {% elsif tag_version_value == current_version_value %}
     <span class="tag">New!</span>
     <span class="tag is-success">{{ include.version }}</span>
