--- a/sass/form/shared.sass
+++ b/sass/form/shared.sass
@@ -1,9 +1,9 @@
-$input-color: $text-strong !default
+$input-color: inherit !default
 $input-background-color: $scheme-main !default
 $input-border-color: $border !default
 $input-height: $control-height !default
 $input-shadow: inset 0 0.0625em 0.125em rgba($scheme-invert, 0.05) !default
-$input-placeholder-color: rgba($input-color, 0.3) !default
+$input-placeholder-color: bulmaRgba($input-color, 0.3) !default
 
 $input-hover-color: $text-strong !default
 $input-hover-border-color: $border-hover !default
