--- a/sass/layout/hero.sass
+++ b/sass/layout/hero.sass
@@ -27,7 +27,7 @@ $hero-body-padding-large: 18rem 1.5rem !default
       .title
         color: $color-invert
       .subtitle
-        color: rgba($color-invert, 0.9)
+        color: bulmaRgba($color-invert, 0.9)
         a:not(.button),
         strong
           color: $color-invert
@@ -36,7 +36,7 @@ $hero-body-padding-large: 18rem 1.5rem !default
           background-color: $color
       .navbar-item,
       .navbar-link
-        color: rgba($color-invert, 0.7)
+        color: bulmaRgba($color-invert, 0.7)
       a.navbar-item,
       .navbar-link
         &:hover,
@@ -57,7 +57,7 @@ $hero-body-padding-large: 18rem 1.5rem !default
           a
             color: $color-invert
             &:hover
-              background-color: rgba($scheme-invert, 0.1)
+              background-color: bulmaRgba($scheme-invert, 0.1)
           li.is-active a
             &,
             &:hover
