Update backers January 2020

--- a/docs/_includes/global/navbar.html
+++ b/docs/_includes/global/navbar.html
@@ -82,7 +82,7 @@
               </span>
             </a>
             {% unless forloop.last %}
-              <hr class="navbar-divider">
+              <hr class="navbar-divider {% if forloop.first %}is-hidden-widescreen{% endif %}">
             {% endunless %}
           {% endfor %}
         </div>
