--- a/sass/elements/table.sass
+++ b/sass/elements/table.sass
@@ -54,7 +54,7 @@ $table-striped-row-even-hover-background-color: $scheme-main-ter !default
   th
     color: $table-cell-heading-color
     &:not([align])
-      text-align: left
+      text-align: inherit
   tr
     &.is-selected
       background-color: $table-row-active-background-color
