--- a/sass/utilities/mixins.sass
+++ b/sass/utilities/mixins.sass
@@ -128,6 +128,61 @@
     @media screen and (min-width: $fullhd)
       @content
 
+=ltr
+  @if not $rtl
+    @content
+
+=rtl
+  @if $rtl
+    @content
+
+// $directions: ("left": "right", "right": "left")
+
+=border-right($spacing)
+  @if $rtl
+    border-left: $spacing
+  @else
+    border-right: $spacing
+
+=border-left($spacing)
+  @if $rtl
+    border-right: $spacing
+  @else
+    border-left: $spacing
+
+=margin-right($spacing)
+  @if $rtl
+    margin-left: $spacing
+  @else
+    margin-right: $spacing
+
+=right($spacing)
+  @if $rtl
+    left: $spacing
+  @else
+    right: $spacing
+
+=left($spacing)
+  @if $rtl
+    right: $spacing
+  @else
+    left: $spacing
+
+=margin-left($spacing)
+  @if $rtl
+    margin-right: $spacing
+  @else
+    margin-left: $spacing
+
+// =directioner($spacing)
+//   @supports (margin-inline-end: 1px)
+//     margin-inline-end: $spacing
+//   @supports
+//     @if $rtl
+//       margin-left: $spacing
+//     @else
+//       margin-right: $spacing
+
 // Placeholders
 
 =unselectable
