--- a/sass/components/dropdown.sass
+++ b/sass/components/dropdown.sass
@@ -63,7 +63,7 @@ $dropdown-divider-background-color: $border-light !default
 a.dropdown-item,
 button.dropdown-item
   padding-right: 3rem
-  text-align: left
+  text-align: inherit
   white-space: nowrap
   width: 100%
   &:hover
