--- a/sass/components/media.sass
+++ b/sass/components/media.sass
@@ -1,9 +1,11 @@
 $media-border-color: bulmaRgba($border, 0.5) !default
+$media-spacing: 1rem
+$media-spacing-large: 1.5rem
 
 .media
   align-items: flex-start
   display: flex
-  text-align: left
+  text-align: inherit
   .content:not(:last-child)
     margin-bottom: 0.75rem
   .media
@@ -19,13 +21,13 @@ $media-border-color: bulmaRgba($border, 0.5) !default
         margin-top: 0.5rem
   & + .media
     border-top: 1px solid $media-border-color
-    margin-top: 1rem
-    padding-top: 1rem
+    margin-top: $media-spacing
+    padding-top: $media-spacing
   // Sizes
   &.is-large
     & + .media
-      margin-top: 1.5rem
-      padding-top: 1.5rem
+      margin-top: $media-spacing-large
+      padding-top: $media-spacing-large
 
 .media-left,
 .media-right
@@ -33,18 +35,24 @@ $media-border-color: bulmaRgba($border, 0.5) !default
   flex-grow: 0
   flex-shrink: 0
 
-.media-left
-  margin-right: 1rem
-
-.media-right
-  margin-left: 1rem
-
 .media-content
   flex-basis: auto
   flex-grow: 1
   flex-shrink: 1
-  text-align: left
+  text-align: inherit
 
 +mobile
   .media-content
     overflow-x: auto
+
++ltr
+  .media-left
+    margin-right: $media-spacing
+  .media-right
+    margin-left: $media-spacing
+
++rtl
+  .media-left
+    margin-left: $media-spacing
+  .media-right
+    margin-right: $media-spacing
