--- a/sass/components/message.sass
+++ b/sass/components/message.sass
@@ -79,7 +79,7 @@ $message-colors: $colors !default
   .delete
     flex-grow: 0
     flex-shrink: 0
-    margin-left: 0.75em
+    +margin-left(0.75em)
   & + .message-body
     border-width: $message-header-body-border-width
     border-top-left-radius: 0
