--- a/sass/form/file.sass
+++ b/sass/form/file.sass
@@ -166,7 +166,7 @@ $file-name-max-width: 16em !default
   display: block
   max-width: $file-name-max-width
   overflow: hidden
-  text-align: left
+  text-align: inherit
   text-overflow: ellipsis
 
 .file-icon
