--- a/sass/form/tools.sass
+++ b/sass/form/tools.sass
@@ -38,7 +38,7 @@ $help-size: $size-small !default
     justify-content: flex-start
     .control
       &:not(:last-child)
-        +margin-right(-1px)
+        +directioner("margin", -1px)
       &:not(:first-child):not(:last-child)
         .button,
         .input,
@@ -96,7 +96,7 @@ $help-size: $size-small !default
       flex-shrink: 0
       &:not(:last-child)
         margin-bottom: 0
-        +margin-right(0.75rem)
+        +directioner("margin", 0.75rem)
       &.is-expanded
         flex-grow: 1
         flex-shrink: 1
@@ -127,7 +127,7 @@ $help-size: $size-small !default
     flex-basis: 0
     flex-grow: 1
     flex-shrink: 0
-    +margin-right(1.5rem)
+    +directioner("margin", 1.5rem)
     text-align: right
     &.is-small
       font-size: $size-small
@@ -156,7 +156,7 @@ $help-size: $size-small !default
       &:not(.is-narrow)
         flex-grow: 1
       &:not(:last-child)
-        +margin-right(0.75rem)
+        +directioner("margin", 0.75rem)
 
 .control
   box-sizing: border-box
