--- a/sass/components/dropdown.sass
+++ b/sass/components/dropdown.sass
@@ -62,7 +62,7 @@ $dropdown-divider-background-color: $border-light !default
 
 a.dropdown-item,
 button.dropdown-item
-  padding-right: 3rem
+  +directioner("padding", 3rem)
   text-align: inherit
   white-space: nowrap
   width: 100%
