Rename LTR mixins

--- a/sass/components/breadcrumb.sass
+++ b/sass/components/breadcrumb.sass
@@ -24,7 +24,7 @@ $breadcrumb-item-separator-color: $border-hover !default
     align-items: center
     display: flex
     &:first-child a
-      +directioner("padding", 0, false)
+      +ltr-property("padding", 0, false)
     &.is-active
       a
         color: $breadcrumb-item-active-color
@@ -41,9 +41,9 @@ $breadcrumb-item-separator-color: $border-hover !default
     justify-content: flex-start
   .icon
     &:first-child
-      +directioner("margin", 0.5em)
+      +ltr-property("margin", 0.5em)
     &:last-child
-      +directioner("margin", 0.5em, false)
+      +ltr-property("margin", 0.5em, false)
   // Alignment
   &.is-centered
     ol,
