--- a/sass/components/media.sass
+++ b/sass/components/media.sass
@@ -35,6 +35,12 @@ $media-spacing-large: 1.5rem
   flex-grow: 0
   flex-shrink: 0
 
+.media-left
+  +ltr-property("margin", $media-spacing)
+
+.media-right
+  +ltr-property("margin", $media-spacing, false)
+
 .media-content
   flex-basis: auto
   flex-grow: 1
@@ -44,15 +50,3 @@ $media-spacing-large: 1.5rem
 +mobile
   .media-content
     overflow-x: auto
-
-+ltr
-  .media-left
-    margin-right: $media-spacing
-  .media-right
-    margin-left: $media-spacing
-
-+rtl
-  .media-left
-    margin-left: $media-spacing
-  .media-right
-    margin-right: $media-spacing
