--- a/sass/components/tabs.sass
+++ b/sass/components/tabs.sass
@@ -78,9 +78,9 @@ $tabs-toggle-link-active-color: $link-invert !default
       padding-left: 0.75em
   .icon
     &:first-child
-      +directioner("margin", 0.5em)
+      +ltr-property("margin", 0.5em)
     &:last-child
-      +directioner("margin", 0.5em, false)
+      +ltr-property("margin", 0.5em, false)
   // Alignment
   &.is-centered
     ul
@@ -122,7 +122,7 @@ $tabs-toggle-link-active-color: $link-invert !default
         z-index: 2
     li
       & + li
-        +directioner("margin", -#{$tabs-toggle-link-border-width}, false)
+        +ltr-property("margin", -#{$tabs-toggle-link-border-width}, false)
       &:first-child a
         +ltr
           border-radius: $tabs-toggle-link-radius 0 0 $tabs-toggle-link-radius
