--- a/sass/elements/notification.sass
+++ b/sass/elements/notification.sass
@@ -25,7 +25,7 @@ $notification-padding-rtl: 1.25rem 1.5rem 1.25rem 2.5rem !default
   pre code
     background: transparent
   & > .delete
-    +right(0.5rem)
+    +ltr-position(0.5rem)
     position: absolute
     top: 0.5rem
   .title,
