--- a/sass/form/tools.sass
+++ b/sass/form/tools.sass
@@ -38,7 +38,7 @@ $help-size: $size-small !default
     justify-content: flex-start
     .control
       &:not(:last-child)
-        +directioner("margin", -1px)
+        +ltr-property("margin", -1px)
       &:not(:first-child):not(:last-child)
         .button,
         .input,
@@ -96,7 +96,7 @@ $help-size: $size-small !default
       flex-shrink: 0
       &:not(:last-child)
         margin-bottom: 0
-        +directioner("margin", 0.75rem)
+        +ltr-property("margin", 0.75rem)
       &.is-expanded
         flex-grow: 1
         flex-shrink: 1
@@ -127,7 +127,7 @@ $help-size: $size-small !default
     flex-basis: 0
     flex-grow: 1
     flex-shrink: 0
-    +directioner("margin", 1.5rem)
+    +ltr-property("margin", 1.5rem)
     text-align: right
     &.is-small
       font-size: $size-small
@@ -156,7 +156,7 @@ $help-size: $size-small !default
       &:not(.is-narrow)
         flex-grow: 1
       &:not(:last-child)
-        +directioner("margin", 0.75rem)
+        +ltr-property("margin", 0.75rem)
 
 .control
   box-sizing: border-box
@@ -202,7 +202,7 @@ $help-size: $size-small !default
     &::after
       @extend %loader
       position: absolute !important
-      +right(0.625em)
+      +ltr-position(0.625em)
       top: 0.625em
       z-index: 4
     &.is-small:after
