--- a/sass/components/dropdown.sass
+++ b/sass/components/dropdown.sass
@@ -38,7 +38,7 @@ $dropdown-divider-background-color: $border-light !default
 
 .dropdown-menu
   display: none
-  left: 0
+  +ltr-position(0, false)
   min-width: $dropdown-menu-min-width
   padding-top: $dropdown-content-offset
   position: absolute
@@ -62,7 +62,7 @@ $dropdown-divider-background-color: $border-light !default
 
 a.dropdown-item,
 button.dropdown-item
-  +directioner("padding", 3rem)
+  +ltr-property("padding", 3rem)
   text-align: inherit
   white-space: nowrap
   width: 100%
