--- a/sass/components/level.sass
+++ b/sass/components/level.sass
@@ -20,7 +20,7 @@ $level-item-spacing: ($block-spacing / 2) !default
     .level-item
       &:not(:last-child)
         margin-bottom: 0
-        +directioner("margin", $level-item-spacing)
+        +ltr-property("margin", $level-item-spacing)
       &:not(.is-narrow)
         flex-grow: 1
   // Responsiveness
@@ -57,7 +57,7 @@ $level-item-spacing: ($block-spacing / 2) !default
     // Responsiveness
     +tablet
       &:not(:last-child)
-        +directioner("margin", $level-item-spacing)
+        +ltr-property("margin", $level-item-spacing)
 
 .level-left
   align-items: center
