Fixes #2780: Add list to components

--- a/docs/_includes/content/comparison.html
+++ b/docs/_includes/content/comparison.html
@@ -351,10 +351,12 @@
   </td>
 </tr>
 <tr>
-  <td class="bd-is-empty">
-    –
+  <td>
+    <a href="{{ site.url }}/documentation/components/list">
+      list
+    </a>
   </td>
-  <td class="bd-is-unique">
+  <td>
     <a href="https://getbootstrap.com/css/#type-lists" target="_blank">
       lists
     </a>
