--- a/docs/_sass/footer.sass
+++ b/docs/_sass/footer.sass
@@ -54,6 +54,13 @@
 .bd-footer-donation
   flex: none
 
+.bd-footer-donation-items
+  display: flex
+  flex-wrap: wrap
+  justify-content: center
+  .bd-footer-sponsor
+    width: 12rem
+
 .bd-footer-sponsor a
   @extend %center
   height: 70px
