--- a/docs/_sass/index.sass
+++ b/docs/_sass/index.sass
@@ -149,6 +149,7 @@
   max-width: $intro-width
 
 .bd-focus-item
+  @extend %link-before-background
   border-radius: $radius-large
   padding-top: 1.25rem
   position: relative
@@ -165,22 +166,6 @@
     position: relative
     strong
       color: currentColor
-  &::before
-    +overlay
-    background-color: $scheme-main-bis
-    border-radius: $radius-large
-    content: ""
-    display: block
-    opacity: 0
-    pointer-events: none
-    transform: scale(1.1)
-    transform-origin: center
-    transition-duration: $speed * 2
-    transition-property: opacity, transform
-  &:hover
-    &::before
-      opacity: 1
-      transform: scale(1)
     .subtitle
       color: $text
   &:nth-child(1):hover
