--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -10858,7 +10858,7 @@ label.panel-block:hover {
   padding: 3rem 1.5rem 6rem;
 }
 
-.bd-columns-tool, .bd-footer-sponsor a, .bd-footer-donation-action, .bd-footer-star-figure, .bd-minis-title, .bd-minis-link, .bd-mini {
+.bd-columns-tool, .bd-footer-sponsor a, .bd-footer-donation-action, .bd-footer-star-figure, .bd-sponsor-item, .bd-minis-title, .bd-minis-link, .bd-mini {
   align-items: center;
   display: flex;
   justify-content: center;
@@ -10869,6 +10869,29 @@ label.panel-block:hover {
   border-radius: 6px;
   box-shadow: 0 1.5rem 1.5rem -1.25rem rgba(10, 10, 10, 0.05);
   display: block;
+}
+
+.bd-focus-item::before, .bd-sponsor-item::before {
+  bottom: 0;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  background-color: #fafafa;
+  border-radius: 6px;
+  content: "";
+  display: block;
+  opacity: 0;
+  pointer-events: none;
+  transform: scale(1.1);
+  transform-origin: center;
+  transition-duration: 172ms;
+  transition-property: opacity, transform;
+}
+
+.bd-focus-item:hover::before, .bd-sponsor-item:hover::before {
+  opacity: 1;
+  transform: scale(1);
 }
 
 .bd-main {
@@ -11979,30 +12002,7 @@ svg {
   color: currentColor;
 }
 
-.bd-focus-item::before {
-  bottom: 0;
-  left: 0;
-  position: absolute;
-  right: 0;
-  top: 0;
-  background-color: #fafafa;
-  border-radius: 6px;
-  content: "";
-  display: block;
-  opacity: 0;
-  pointer-events: none;
-  transform: scale(1.1);
-  transform-origin: center;
-  transition-duration: 172ms;
-  transition-property: opacity, transform;
-}
-
-.bd-focus-item:hover::before {
-  opacity: 1;
-  transform: scale(1);
-}
-
-.bd-focus-item:hover .subtitle {
+.bd-focus-item .subtitle .subtitle {
   color: #4a4a4a;
 }
 
@@ -12525,6 +12525,16 @@ svg {
 
 .bd-footer-donation {
   flex: none;
+}
+
+.bd-footer-donation-items {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.bd-footer-donation-items .bd-footer-sponsor {
+  width: 12rem;
 }
 
 .bd-footer-sponsor a {
@@ -14499,8 +14509,9 @@ svg {
 }
 
 .bd-partner-sponsor {
-  align-items: center;
+  align-items: stretch;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   margin: 0.25rem 1rem;
   min-height: 80px;
@@ -14512,6 +14523,23 @@ svg {
   font-size: 0.875em;
   line-height: 1.25;
   min-height: 0;
+}
+
+.bd-partner-sponsor.is-text .bd-sponsor-item {
+  display: inline;
+}
+
+.bd-partner-sponsor.is-text .bd-sponsor-item:before {
+  display: none;
+}
+
+.bd-sponsor-item {
+  flex-grow: 1;
+  position: relative;
+}
+
+.bd-sponsor-item img {
+  position: relative;
 }
 
 .bd-partnrs {
