--- a/docs/_includes/footer/support.html
+++ b/docs/_includes/footer/support.html
@@ -21,15 +21,17 @@
     {% if site.data.sponsors.footer.size > 0 %}
       <div class="bd-footer-donation column">
         <p class="bd-footer-donation-title">
-          Visit our <strong>Sponsor</strong>
+          Visit our <strong>Sponsors</strong>
         </p>
 
-        {% for sponsor_id in site.data.sponsors.footer %}
-          {% include elements/sponsor-item.html
-            sponsor_id=sponsor_id
-            classname="bd-footer-sponsor"
-            %}
-        {% endfor %}
+        <div class="bd-footer-donation-items">
+          {% for sponsor_id in site.data.sponsors.footer %}
+            {% include elements/sponsor-item.html
+              sponsor_id=sponsor_id
+              classname="bd-footer-sponsor"
+              %}
+          {% endfor %}
+        </div>
       </div>
     {% endif %}
 
