--- a/docs/_sass/sponsors.sass
+++ b/docs/_sass/sponsors.sass
@@ -24,8 +24,9 @@ $bd-partner-width: 12rem
   max-width: (8 * $bd-partner-width)
 
 .bd-partner-sponsor
-  align-items: center
+  align-items: stretch
   display: flex
+  flex-direction: column
   justify-content: center
   margin: 0.25rem 1rem
   // min-height: $carbon-height + $carbon-poweredby-height
@@ -36,6 +37,18 @@ $bd-partner-width: 12rem
     font-size: 0.875em
     line-height: 1.25
     min-height: 0
+    .bd-sponsor-item
+      display: inline
+    .bd-sponsor-item:before
+      display: none
+
+.bd-sponsor-item
+  @extend %link-before-background
+  @extend %center
+  flex-grow: 1
+  position: relative
+  img
+    position: relative
 
 .bd-partnrs
   background-color: $scheme-main-bis
