Add ten column support

--- a/docs/_sass/example.sass
+++ b/docs/_sass/example.sass
@@ -110,6 +110,22 @@
         flex-grow: 1
       .highlight pre
         white-space: pre
+    &.bd-is-one-tenth
+      .bd-snippet-preview
+        align-items: center
+        display: flex
+        justify-content: center
+        width: calc(64px + 3rem)
+      .bd-snippet-code
+        width: calc(100% - 64px - 3rem)
+    &.bd-is-two-tenths
+      .bd-snippet-preview
+        align-items: center
+        display: flex
+        justify-content: center
+        width: calc(128px + 3rem)
+      .bd-snippet-code
+        width: calc(100% - 128px - 3rem)
     &.bd-is-one-fifth
       .bd-snippet-preview
         align-items: center
