--- a/sass/grid/columns.sass
+++ b/sass/grid/columns.sass
@@ -17,7 +17,8 @@ $column-gap: 0.75rem !default
   .columns.is-mobile > &.is-two-thirds
     flex: none
     width: 66.6666%
-  .columns.is-mobile > &.is-half
+  .columns.is-mobile > &.is-half,
+  .columns.is-mobile > &.is-five-tenths
     flex: none
     width: 50%
   .columns.is-mobile > &.is-one-third
@@ -26,36 +27,65 @@ $column-gap: 0.75rem !default
   .columns.is-mobile > &.is-one-quarter
     flex: none
     width: 25%
-  .columns.is-mobile > &.is-one-fifth
+  .columns.is-mobile > &.is-one-tenth
+    flex: none
+    width: 10%
+  .columns.is-mobile > &.is-one-fifth,
+  .columns.is-mobile > &.is-two-tenths
     flex: none
     width: 20%
-  .columns.is-mobile > &.is-two-fifths
+  .columns.is-mobile > &.is-three-tenths
+    flex: none
+    width: 30%
+  .columns.is-mobile > &.is-two-fifths,
+  .columns.is-mobile > &.is-four-tenths
     flex: none
     width: 40%
-  .columns.is-mobile > &.is-three-fifths
+  .columns.is-mobile > &.is-three-fifths,
+  .columns.is-mobile > &.is-six-tenths
     flex: none
     width: 60%
-  .columns.is-mobile > &.is-four-fifths
+  .columns.is-mobile > &.is-seven-tenths
+    flex: none
+    width: 70%
+  .columns.is-mobile > &.is-four-fifths,
+  .columns.is-mobile > &.is-eight-tenths
     flex: none
     width: 80%
+  .columns.is-mobile > &.is-nine-tenths
+    flex: none
+    width: 90%
   .columns.is-mobile > &.is-offset-three-quarters
     margin-left: 75%
   .columns.is-mobile > &.is-offset-two-thirds
     margin-left: 66.6666%
-  .columns.is-mobile > &.is-offset-half
+  .columns.is-mobile > &.is-offset-half,
+  .columns.is-mobile > &.is-offset-five-tenths
     margin-left: 50%
   .columns.is-mobile > &.is-offset-one-third
     margin-left: 33.3333%
   .columns.is-mobile > &.is-offset-one-quarter
     margin-left: 25%
-  .columns.is-mobile > &.is-offset-one-fifth
+  .columns.is-mobile > &.is-offset-one-tenth
+    margin-left: 10%
+  .columns.is-mobile > &.is-offset-one-fifth,
+  .columns.is-mobile > &.is-offset-two-tenths
     margin-left: 20%
-  .columns.is-mobile > &.is-offset-two-fifths
+  .columns.is-mobile > &.is-offset-three-tenths
+    margin-left: 30%
+  .columns.is-mobile > &.is-offset-two-fifths,
+  .columns.is-mobile > &.is-offset-four-tenths
     margin-left: 40%
-  .columns.is-mobile > &.is-offset-three-fifths
+  .columns.is-mobile > &.is-offset-three-fifths,
+  .columns.is-mobile > &.is-offset-six-tenths
     margin-left: 60%
-  .columns.is-mobile > &.is-offset-four-fifths
+  .columns.is-mobile > &.is-offset-seven-tenths
+    margin-left: 70%
+  .columns.is-mobile > &.is-offset-four-fifths,
+  .columns.is-mobile > &.is-offset-eight-tenths
     margin-left: 80%
+  .columns.is-mobile > &.is-offset-nine-tenths
+    margin-left: 90%
   @for $i from 0 through 12
     .columns.is-mobile > &.is-#{$i}
       flex: none
@@ -74,7 +104,8 @@ $column-gap: 0.75rem !default
     &.is-two-thirds-mobile
       flex: none
       width: 66.6666%
-    &.is-half-mobile
+    &.is-half-mobile,
+    &.is-five-tenths-mobile
       flex: none
       width: 50%
     &.is-one-third-mobile
@@ -83,36 +114,65 @@ $column-gap: 0.75rem !default
     &.is-one-quarter-mobile
       flex: none
       width: 25%
-    &.is-one-fifth-mobile
+    &.is-one-tenth-mobile
+      flex: none
+      width: 10%
+    &.is-one-fifth-mobile,
+    &.is-two-tenths-mobile
       flex: none
       width: 20%
-    &.is-two-fifths-mobile
+    &.is-three-tenths-mobile
+      flex: none
+      width: 30%
+    &.is-two-fifths-mobile,
+    &.is-four-tenths-mobile
       flex: none
       width: 40%
-    &.is-three-fifths-mobile
+    &.is-three-fifths-mobile,
+    &.is-six-tenths-mobile
       flex: none
-      width: 60%
-    &.is-four-fifths-mobile
+      width: 60
+    &.is-seven-tenths-mobile
+      flex: none
+      width: 70%
+    &.is-four-fifths-mobile,
+    &.is-eight-tenths-mobile
       flex: none
       width: 80%
+    &.is-nine-tenths-mobile
+      flex: none
+      width: 90%
     &.is-offset-three-quarters-mobile
       margin-left: 75%
     &.is-offset-two-thirds-mobile
       margin-left: 66.6666%
-    &.is-offset-half-mobile
+    &.is-offset-half-mobile,
+    &.is-offset-five-tenths-mobile
       margin-left: 50%
     &.is-offset-one-third-mobile
       margin-left: 33.3333%
     &.is-offset-one-quarter-mobile
       margin-left: 25%
-    &.is-offset-one-fifth-mobile
+    &.is-offset-one-tenth-mobile
+      margin-left: 10%
+    &.is-offset-one-fifth-mobile,
+    &.is-offset-two-tenths-mobile
       margin-left: 20%
-    &.is-offset-two-fifths-mobile
+    &.is-offset-three-tenths-mobile
+      margin-left: 30%
+    &.is-offset-two-fifths-mobile,
+    &.is-offset-four-tenths-mobile
       margin-left: 40%
-    &.is-offset-three-fifths-mobile
+    &.is-offset-three-fifths-mobile,
+    &.is-offset-six-tenths-mobile
       margin-left: 60%
-    &.is-offset-four-fifths-mobile
+    &.is-offset-seven-tenths-mobile
+      margin-left: 70%
+    &.is-offset-four-fifths-mobile,
+    &.is-offset-eight-tenths-mobile
       margin-left: 80%
+    &.is-offset-nine-tenths-mobile
+      margin-left: 90%
     @for $i from 0 through 12
       &.is-#{$i}-mobile
         flex: none
@@ -136,7 +196,9 @@ $column-gap: 0.75rem !default
       flex: none
       width: 66.6666%
     &.is-half,
-    &.is-half-tablet
+    &.is-half-tablet,
+    &.is-five-tenths,
+    &.is-five-tenths-tablet
       flex: none
       width: 50%
     &.is-one-third,
@@ -147,22 +209,46 @@ $column-gap: 0.75rem !default
     &.is-one-quarter-tablet
       flex: none
       width: 25%
+    &.is-one-tenth,
+    &.is-one-tenth-tablet
+      flex: none
+      width: 10%
     &.is-one-fifth,
-    &.is-one-fifth-tablet
+    &.is-one-fifth-tablet,
+    &.is-two-tenths,
+    &.is-two-tenths-tablet
       flex: none
       width: 20%
+    &.is-three-tenths,
+    &.is-three-tenths-tablet
+      flex: none
+      width: 30%
     &.is-two-fifths,
-    &.is-two-fifths-tablet
+    &.is-two-fifths-tablet,
+    &.is-four-tenths,
+    &.is-four-tenths-tablet
       flex: none
       width: 40%
     &.is-three-fifths,
-    &.is-three-fifths-tablet
+    &.is-three-fifths-tablet,
+    &.is-six-tenths,
+    &.is-six-tenths-tablet
       flex: none
       width: 60%
+    &.is-seven-tenths,
+    &.is-seven-tenths-tablet
+      flex: none
+      width: 70%
     &.is-four-fifths,
-    &.is-four-fifths-tablet
+    &.is-four-fifths-tablet,
+    &.is-eight-tenths,
+    &.is-eight-tenths-tablet
       flex: none
       width: 80%
+    &.is-nine-tenths,
+    &.is-nine-tenths-tablet
+      flex: none
+      width: 90%
     &.is-offset-three-quarters,
     &.is-offset-three-quarters-tablet
       margin-left: 75%
@@ -170,7 +256,9 @@ $column-gap: 0.75rem !default
     &.is-offset-two-thirds-tablet
       margin-left: 66.6666%
     &.is-offset-half,
-    &.is-offset-half-tablet
+    &.is-offset-half-tablet,
+    &.is-offset-five-tenth,
+    &.is-offset-five-tenth-tablet
       margin-left: 50%
     &.is-offset-one-third,
     &.is-offset-one-third-tablet
@@ -178,18 +266,38 @@ $column-gap: 0.75rem !default
     &.is-offset-one-quarter,
     &.is-offset-one-quarter-tablet
       margin-left: 25%
+    &.is-offset-one-tenth,
+    &.is-offset-one-tenth-tablet
+      margin-left: 10%
     &.is-offset-one-fifth,
     &.is-offset-one-fifth-tablet
+    &.is-offset-two-tenth,
+    &.is-offset-two-tenth-tablet
       margin-left: 20%
+    &.is-offset-three-tenth,
+    &.is-offset-three-tenth-tablet
+      margin-left: 30%
     &.is-offset-two-fifths,
     &.is-offset-two-fifths-tablet
+    &.is-offset-four-tenth,
+    &.is-offset-four-tenth-tablet
       margin-left: 40%
     &.is-offset-three-fifths,
-    &.is-offset-three-fifths-tablet
+    &.is-offset-three-fifths-tablet,
+    &.is-offset-six-tenth,
+    &.is-offset-six-tenth-tablet
       margin-left: 60%
+    &.is-offset-seven-tenth,
+    &.is-offset-seven-tenth-tablet
+      margin-left: 70%
     &.is-offset-four-fifths,
-    &.is-offset-four-fifths-tablet
+    &.is-offset-four-fifths-tablet,
+    &.is-offset-eight-tenth,
+    &.is-offset-eight-tenth-tablet
       margin-left: 80%
+    &.is-offset-nine-tenth,
+    &.is-offset-nine-tenth-tablet
+      margin-left: 90%
     @for $i from 0 through 12
       &.is-#{$i},
       &.is-#{$i}-tablet
@@ -210,7 +318,8 @@ $column-gap: 0.75rem !default
     &.is-two-thirds-touch
       flex: none
       width: 66.6666%
-    &.is-half-touch
+    &.is-half-touch,
+    &.is-five-tenths-touch
       flex: none
       width: 50%
     &.is-one-third-touch
@@ -219,36 +328,65 @@ $column-gap: 0.75rem !default
     &.is-one-quarter-touch
       flex: none
       width: 25%
-    &.is-one-fifth-touch
+    &.is-one-tenth-touch
+      flex: none
+      width: 10%
+    &.is-one-fifth-touch,
+    &.is-two-tenths-touch
       flex: none
       width: 20%
-    &.is-two-fifths-touch
+    &.is-three-tenths-touch
+      flex: none
+      width: 30%
+    &.is-two-fifths-touch,
+    &.is-four-tenths-touch
       flex: none
       width: 40%
-    &.is-three-fifths-touch
+    &.is-three-fifths-touch,
+    &.is-six-tenths-touch
       flex: none
       width: 60%
-    &.is-four-fifths-touch
+    &.is-seven-tenths-touch
+      flex: none
+      width: 70%
+    &.is-four-fifths-touch,
+    &.is-eight-tenths-touch
       flex: none
       width: 80%
+    &.is-nine-tenths-touch
+      flex: none
+      width: 90%
     &.is-offset-three-quarters-touch
       margin-left: 75%
     &.is-offset-two-thirds-touch
       margin-left: 66.6666%
-    &.is-offset-half-touch
+    &.is-offset-half-touch,
+    &.is-offset-five-tenths-touch
       margin-left: 50%
     &.is-offset-one-third-touch
       margin-left: 33.3333%
     &.is-offset-one-quarter-touch
       margin-left: 25%
-    &.is-offset-one-fifth-touch
+    &.is-offset-one-tenth-touch
+      margin-left: 10%
+    &.is-offset-one-fifth-touch,
+    &.is-offset-two-tenths-touch
       margin-left: 20%
-    &.is-offset-two-fifths-touch
+    &.is-offset-three-tenths-touch
+      margin-left: 30%
+    &.is-offset-two-fifths-touch,
+    &.is-offset-four-tenths-touch
       margin-left: 40%
-    &.is-offset-three-fifths-touch
+    &.is-offset-three-fifths-touch,
+    &.is-offset-six-tenths-touch
       margin-left: 60%
-    &.is-offset-four-fifths-touch
+    &.is-offset-seven-tenths-touch
+      margin-left: 70%
+    &.is-offset-four-fifths-touch,
+    &.is-offset-eight-tenths-touch
       margin-left: 80%
+    &.is-offset-nine-tenths-touch
+      margin-left: 90%
     @for $i from 0 through 12
       &.is-#{$i}-touch
         flex: none
@@ -267,7 +405,8 @@ $column-gap: 0.75rem !default
     &.is-two-thirds-desktop
       flex: none
       width: 66.6666%
-    &.is-half-desktop
+    &.is-half-desktop,
+    &.is-five-tenths-desktop
       flex: none
       width: 50%
     &.is-one-third-desktop
@@ -276,36 +415,65 @@ $column-gap: 0.75rem !default
     &.is-one-quarter-desktop
       flex: none
       width: 25%
-    &.is-one-fifth-desktop
+    &.is-one-tenth-desktop
+      flex: none
+      width: 10%
+    &.is-one-fifth-desktop,
+    &.is-two-tenths-desktop
       flex: none
       width: 20%
-    &.is-two-fifths-desktop
+    &.is-three-tenths-desktop
+      flex: none
+      width: 30%
+    &.is-two-fifths-desktop,
+    &.is-four-tenths-desktop
       flex: none
       width: 40%
-    &.is-three-fifths-desktop
+    &.is-three-fifths-desktop,
+    &.is-six-tenths-desktop
       flex: none
       width: 60%
-    &.is-four-fifths-desktop
+    &.is-seven-tenths-desktop
+      flex: none
+      width: 70%
+    &.is-four-fifths-desktop,
+    &.is-eight-tenths-desktop
       flex: none
       width: 80%
+    &.is-nine-tenths-desktop
+      flex: none
+      width: 90%
     &.is-offset-three-quarters-desktop
       margin-left: 75%
     &.is-offset-two-thirds-desktop
       margin-left: 66.6666%
-    &.is-offset-half-desktop
+    &.is-offset-half-desktop,
+    &.is-offset-five-tenths-desktop
       margin-left: 50%
     &.is-offset-one-third-desktop
       margin-left: 33.3333%
     &.is-offset-one-quarter-desktop
       margin-left: 25%
-    &.is-offset-one-fifth-desktop
+    &.is-offset-one-tenth-desktop
+      margin-left: 10%
+    &.is-offset-one-fifth-desktop,
+    &.is-offset-two-tenths-desktop
       margin-left: 20%
-    &.is-offset-two-fifths-desktop
+    &.is-offset-three-tenths-desktop
+      margin-left: 30%
+    &.is-offset-two-fifths-desktop,
+    &.is-offset-four-tenths-desktop
       margin-left: 40%
-    &.is-offset-three-fifths-desktop
+    &.is-offset-three-fifths-desktop,
+    &.is-offset-six-tenths-desktop
       margin-left: 60%
-    &.is-offset-four-fifths-desktop
+    &.is-offset-seven-tenths-desktop
+      margin-left: 70%
+    &.is-offset-four-fifths-desktop,
+    &.is-offset-eight-tenths-desktop
       margin-left: 80%
+    &.is-offset-nine-tenths-desktop
+      margin-left: 90%
     @for $i from 0 through 12
       &.is-#{$i}-desktop
         flex: none
@@ -325,6 +493,7 @@ $column-gap: 0.75rem !default
       flex: none
       width: 66.6666%
     &.is-half-widescreen
+    &.is-five-tenths-widescreen
       flex: none
       width: 50%
     &.is-one-third-widescreen
@@ -333,36 +502,65 @@ $column-gap: 0.75rem !default
     &.is-one-quarter-widescreen
       flex: none
       width: 25%
-    &.is-one-fifth-widescreen
+    &.is-one-tenth-widescreen
+      flex: none
+      width: 10%
+    &.is-one-fifth-widescreen,
+    &.is-two-tenths-widescreen
       flex: none
       width: 20%
-    &.is-two-fifths-widescreen
+    &.is-three-tenths-widescreen
+      flex: none
+      width: 30%
+    &.is-two-fifths-widescreen,
+    &.is-four-tenths-widescreen
       flex: none
       width: 40%
-    &.is-three-fifths-widescreen
+    &.is-three-fifths-widescreen,
+    &.is-six-tenths-widescreen
       flex: none
       width: 60%
-    &.is-four-fifths-widescreen
+    &.is-seven-tenths-widescreen
+      flex: none
+      width: 70%
+    &.is-four-fifths-widescreen,
+    &.is-eight-tenths-widescreen
       flex: none
       width: 80%
+    &.is-nine-tenths-widescreen
+      flex: none
+      width: 90%
     &.is-offset-three-quarters-widescreen
       margin-left: 75%
     &.is-offset-two-thirds-widescreen
       margin-left: 66.6666%
-    &.is-offset-half-widescreen
+    &.is-offset-half-widescreen,
+    &.is-offset-five-tenths-widescreen
       margin-left: 50%
     &.is-offset-one-third-widescreen
       margin-left: 33.3333%
     &.is-offset-one-quarter-widescreen
       margin-left: 25%
-    &.is-offset-one-fifth-widescreen
+    &.is-offset-one-tenth-widescreen
+      margin-left: 10%
+    &.is-offset-one-fifth-widescreen,
+    &.is-offset-two-tenths-widescreen
       margin-left: 20%
-    &.is-offset-two-fifths-widescreen
+    &.is-offset-three-tenths-widescreen
+      margin-left: 30%
+    &.is-offset-two-fifths-widescreen,
+    &.is-offset-four-tenths-widescreen
       margin-left: 40%
-    &.is-offset-three-fifths-widescreen
+    &.is-offset-three-fifths-widescreen,
+    &.is-offset-six-tenths-widescreen
       margin-left: 60%
-    &.is-offset-four-fifths-widescreen
+    &.is-offset-seven-tenths-widescreen
+      margin-left: 70%
+    &.is-offset-four-fifths-widescreen,
+    &.is-offset-eight-tenths-widescreen
       margin-left: 80%
+    &.is-offset-nine-tenths-widescreen
+      margin-left: 90%
     @for $i from 0 through 12
       &.is-#{$i}-widescreen
         flex: none
@@ -381,7 +579,8 @@ $column-gap: 0.75rem !default
     &.is-two-thirds-fullhd
       flex: none
       width: 66.6666%
-    &.is-half-fullhd
+    &.is-half-fullhd,
+    &.is-five-tenths-fullhd
       flex: none
       width: 50%
     &.is-one-third-fullhd
@@ -390,36 +589,65 @@ $column-gap: 0.75rem !default
     &.is-one-quarter-fullhd
       flex: none
       width: 25%
-    &.is-one-fifth-fullhd
+    &.is-one-tenth-fullhd
+      flex: none
+      width: 10%
+    &.is-one-fifth-fullhd,
+    &.is-two-tenths-fullhd
       flex: none
       width: 20%
-    &.is-two-fifths-fullhd
+    &.is-three-tenths-fullhd
+      flex: none
+      width: 30%
+    &.is-two-fifths-fullhd,
+    &.is-four-tenths-fullhd
       flex: none
       width: 40%
-    &.is-three-fifths-fullhd
+    &.is-three-fifths-fullhd,
+    &.is-six-tenths-fullhd
       flex: none
       width: 60%
-    &.is-four-fifths-fullhd
+    &.is-seven-tenths-fullhd
+      flex: none
+      width: 70%
+    &.is-four-fifths-fullhd,
+    &.is-eight-tenths-fullhd
       flex: none
       width: 80%
+    &.is-nine-tenths-fullhd
+      flex: none
+      width: 90%
     &.is-offset-three-quarters-fullhd
       margin-left: 75%
     &.is-offset-two-thirds-fullhd
       margin-left: 66.6666%
-    &.is-offset-half-fullhd
+    &.is-offset-half-fullhd,
+    &.is-offset-five-tenths-fullhd
       margin-left: 50%
     &.is-offset-one-third-fullhd
       margin-left: 33.3333%
     &.is-offset-one-quarter-fullhd
       margin-left: 25%
-    &.is-offset-one-fifth-fullhd
+    &.is-offset-one-tenth-fullhd
+      margin-left: 10%
+    &.is-offset-one-fifth-fullhd,
+    &.is-offset-two-tenths-fullhd
       margin-left: 20%
-    &.is-offset-two-fifths-fullhd
+    &.is-offset-three-tenths-fullhd
+      margin-left: 30%
+    &.is-offset-two-fifths-fullhdm
+    &.is-offset-four-tenths-fullhd
       margin-left: 40%
-    &.is-offset-three-fifths-fullhd
+    &.is-offset-three-fifths-fullhd,
+    &.is-offset-six-tenths-fullhd
       margin-left: 60%
-    &.is-offset-four-fifths-fullhd
+    &.is-offset-seven-tenths-fullhd
+      margin-left: 70%
+    &.is-offset-four-fifths-fullhd,
+    &.is-offset-eight-tenths-fullhd
       margin-left: 80%
+    &.is-offset-nine-tenths-fullhd
+      margin-left: 90%
     @for $i from 0 through 12
       &.is-#{$i}-fullhd
         flex: none
