outdated cards with new word in it changed

--- a/docs/documentation/components/card.html
+++ b/docs/documentation/components/card.html
@@ -135,7 +135,7 @@ meta:
 </div>
 
 <div class="tags has-addons">
-  <span class="tag">New</span>
+  <span class="tag">Since</span>
   <span class="tag is-info">0.5.3</span>
 </div>
 
