Add RTL build scripts

--- a/css/bulma-rtl.css
+++ b/css/bulma-rtl.css
@@ -1597,13 +1597,13 @@ a.box:active {
 }
 
 .button .icon:first-child:not(:last-child) {
-  margin-left: calc(-0.5em - 1px);
-  margin-right: 0.25em;
+  margin-right: calc(-0.5em - 1px);
+  margin-left: 0.25em;
 }
 
 .button .icon:last-child:not(:first-child) {
-  margin-left: 0.25em;
-  margin-right: calc(-0.5em - 1px);
+  margin-right: 0.25em;
+  margin-left: calc(-0.5em - 1px);
 }
 
 .button .icon:first-child:last-child {
@@ -2884,7 +2884,7 @@ fieldset[disabled] .button {
 }
 
 .buttons .button:not(:last-child):not(.is-fullwidth) {
-  margin-right: 0.5rem;
+  margin-left: 0.5rem;
 }
 
 .buttons:last-child {
@@ -3071,13 +3071,13 @@ fieldset[disabled] .button {
 
 .content blockquote {
   background-color: whitesmoke;
-  border-left: 5px solid #dbdbdb;
+  border-right: 5px solid #dbdbdb;
   padding: 1.25em 1.5em;
 }
 
 .content ol {
   list-style-position: outside;
-  margin-left: 2em;
+  margin-right: 2em;
   margin-top: 1em;
 }
 
@@ -3103,7 +3103,7 @@ fieldset[disabled] .button {
 
 .content ul {
   list-style: disc outside;
-  margin-left: 2em;
+  margin-right: 2em;
   margin-top: 1em;
 }
 
@@ -3117,7 +3117,7 @@ fieldset[disabled] .button {
 }
 
 .content dd {
-  margin-left: 2em;
+  margin-right: 2em;
 }
 
 .content figure {
@@ -3370,7 +3370,7 @@ fieldset[disabled] .button {
   background-color: whitesmoke;
   border-radius: 4px;
   position: relative;
-  padding: 1.25rem 2.5rem 1.25rem 1.5rem;
+  padding: 1.25rem 1.5rem 1.25rem 2.5rem;
 }
 
 .notification a:not(.button):not(.dropdown-item) {
@@ -3392,7 +3392,7 @@ fieldset[disabled] .button {
 }
 
 .notification > .delete {
-  right: 0.5rem;
+  left: 0.5rem;
   position: absolute;
   top: 0.5rem;
 }
@@ -5336,7 +5336,7 @@ fieldset[disabled] .select select:hover {
 }
 
 .field.has-addons .control:not(:last-child) {
-  margin-right: -1px;
+  margin-left: -1px;
 }
 
 .field.has-addons .control:not(:first-child):not(:last-child) .button,
@@ -5348,15 +5348,15 @@ fieldset[disabled] .select select:hover {
 .field.has-addons .control:first-child:not(:only-child) .button,
 .field.has-addons .control:first-child:not(:only-child) .input,
 .field.has-addons .control:first-child:not(:only-child) .select select {
-  border-bottom-right-radius: 0;
-  border-top-right-radius: 0;
+  border-bottom-left-radius: 0;
+  border-top-left-radius: 0;
 }
 
 .field.has-addons .control:last-child:not(:only-child) .button,
 .field.has-addons .control:last-child:not(:only-child) .input,
 .field.has-addons .control:last-child:not(:only-child) .select select {
-  border-bottom-left-radius: 0;
-  border-top-left-radius: 0;
+  border-bottom-right-radius: 0;
+  border-top-right-radius: 0;
 }
 
 .field.has-addons .control .button:not([disabled]):hover, .field.has-addons .control .button:not([disabled]).is-hovered,
@@ -5420,7 +5420,7 @@ fieldset[disabled] .select select:hover {
 
 .field.is-grouped > .control:not(:last-child) {
   margin-bottom: 0;
-  margin-right: 0.75rem;
+  margin-left: 0.75rem;
 }
 
 .field.is-grouped > .control.is-expanded {
@@ -5473,7 +5473,7 @@ fieldset[disabled] .select select:hover {
     flex-basis: 0;
     flex-grow: 1;
     flex-shrink: 0;
-    margin-right: 1.5rem;
+    margin-left: 1.5rem;
     text-align: right;
   }
   .field-label.is-small {
@@ -5514,7 +5514,7 @@ fieldset[disabled] .select select:hover {
     flex-grow: 1;
   }
   .field-body > .field:not(:last-child) {
-    margin-right: 0.75rem;
+    margin-left: 0.75rem;
   }
 }
 
@@ -5580,7 +5580,7 @@ fieldset[disabled] .select select:hover {
 
 .control.is-loading::after {
   position: absolute !important;
-  right: 0.625em;
+  left: 0.625em;
   top: 0.625em;
   z-index: 4;
 }
@@ -5620,7 +5620,7 @@ fieldset[disabled] .select select:hover {
 }
 
 .breadcrumb li:first-child a {
-  padding-left: 0;
+  padding-right: 0;
 }
 
 .breadcrumb li.is-active a {
@@ -5643,11 +5643,11 @@ fieldset[disabled] .select select:hover {
 }
 
 .breadcrumb .icon:first-child {
-  margin-right: 0.5em;
+  margin-left: 0.5em;
 }
 
 .breadcrumb .icon:last-child {
-  margin-left: 0.5em;
+  margin-right: 0.5em;
 }
 
 .breadcrumb.is-centered ol,
@@ -5752,7 +5752,7 @@ fieldset[disabled] .select select:hover {
 }
 
 .card-footer-item:not(:last-child) {
-  border-right: 1px solid #ededed;
+  border-left: 1px solid #ededed;
 }
 
 .card .media:not(:last-child) {
@@ -5783,7 +5783,7 @@ fieldset[disabled] .select select:hover {
 
 .dropdown-menu {
   display: none;
-  left: 0;
+  right: 0;
   min-width: 12rem;
   padding-top: 4px;
   position: absolute;
@@ -5810,7 +5810,7 @@ fieldset[disabled] .select select:hover {
 
 a.dropdown-item,
 button.dropdown-item {
-  padding-right: 3rem;
+  padding-left: 3rem;
   text-align: inherit;
   white-space: nowrap;
   width: 100%;
@@ -5865,7 +5865,7 @@ button.dropdown-item.is-active {
 
 .level.is-mobile .level-item:not(:last-child) {
   margin-bottom: 0;
-  margin-right: 0.75rem;
+  margin-left: 0.75rem;
 }
 
 .level.is-mobile .level-item:not(.is-narrow) {
@@ -5916,7 +5916,7 @@ button.dropdown-item.is-active {
 @media screen and (min-width: 769px), print {
   .level-left .level-item:not(:last-child),
   .level-right .level-item:not(:last-child) {
-    margin-right: 0.75rem;
+    margin-left: 0.75rem;
   }
 }
 
@@ -6035,11 +6035,11 @@ a.list-item {
 }
 
 .media-left {
-  margin-right: 1rem;
+  margin-left: 1rem;
 }
 
 .media-right {
-  margin-left: 1rem;
+  margin-right: 1rem;
 }
 
 .media-content {
@@ -6093,9 +6093,9 @@ a.list-item {
 }
 
 .menu-list li ul {
-  border-left: 1px solid #dbdbdb;
+  border-right: 1px solid #dbdbdb;
   margin: 0.75em;
-  padding-left: 0.75em;
+  padding-right: 0.75em;
 }
 
 .menu-label {
@@ -6292,7 +6292,7 @@ a.list-item {
 .message-header .delete {
   flex-grow: 0;
   flex-shrink: 0;
-  margin-left: 0.75em;
+  margin-right: 0.75em;
 }
 
 .message-header + .message-body {
@@ -6359,7 +6359,7 @@ a.list-item {
   background: none;
   height: 40px;
   position: fixed;
-  right: 20px;
+  left: 20px;
   top: 20px;
   width: 40px;
 }
@@ -6404,7 +6404,7 @@ a.list-item {
 }
 
 .modal-card-foot .button:not(:last-child) {
-  margin-right: 0.5em;
+  margin-left: 0.5em;
 }
 
 .modal-card-body {
@@ -7846,7 +7846,7 @@ a.navbar-item:focus, a.navbar-item:focus-within, a.navbar-item:hover, a.navbar-i
 }
 
 .panel-block input[type="checkbox"] {
-  margin-right: 0.75em;
+  margin-left: 0.75em;
 }
 
 .panel-block > .control {
@@ -7892,7 +7892,7 @@ label.panel-block:hover {
   vertical-align: top;
   width: 1em;
   color: #7a7a7a;
-  margin-right: 0.75em;
+  margin-left: 0.75em;
 }
 
 .panel-icon .fa {
@@ -7966,11 +7966,11 @@ label.panel-block:hover {
 }
 
 .tabs .icon:first-child {
-  margin-right: 0.5em;
+  margin-left: 0.5em;
 }
 
 .tabs .icon:last-child {
-  margin-left: 0.5em;
+  margin-right: 0.5em;
 }
 
 .tabs.is-centered ul {
@@ -7983,7 +7983,7 @@ label.panel-block:hover {
 
 .tabs.is-boxed a {
   border: 1px solid transparent;
-  border-radius: 4px 4px 0 0;
+  border-radius: 0 0 4px 4px;
 }
 
 .tabs.is-boxed a:hover {
@@ -8017,15 +8017,15 @@ label.panel-block:hover {
 }
 
 .tabs.is-toggle li + li {
-  margin-left: -1px;
+  margin-right: -1px;
 }
 
 .tabs.is-toggle li:first-child a {
-  border-radius: 4px 0 0 4px;
+  border-radius: 0 4px 4px 0;
 }
 
 .tabs.is-toggle li:last-child a {
-  border-radius: 0 4px 4px 0;
+  border-radius: 4px 0 0 4px;
 }
 
 .tabs.is-toggle li.is-active a {
@@ -8040,15 +8040,15 @@ label.panel-block:hover {
 }
 
 .tabs.is-toggle.is-toggle-rounded li:first-child a {
-  border-bottom-left-radius: 290486px;
-  border-top-left-radius: 290486px;
-  padding-left: 1.25em;
-}
-
-.tabs.is-toggle.is-toggle-rounded li:last-child a {
   border-bottom-right-radius: 290486px;
   border-top-right-radius: 290486px;
   padding-right: 1.25em;
+}
+
+.tabs.is-toggle.is-toggle-rounded li:last-child a {
+  border-bottom-left-radius: 290486px;
+  border-top-left-radius: 290486px;
+  padding-left: 1.25em;
 }
 
 .tabs.is-small {
@@ -10855,4 +10855,4 @@ label.panel-block:hover {
   background-color: #fafafa;
   padding: 3rem 1.5rem 6rem;
 }
-/*# sourceMappingURL=bulma.css.map */
+/*# sourceMappingURL=bulma-rtl.css.map */
